--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
+apply plugin: 'org.springframework.boot'
 
 repositories {
     mavenCentral()
@@ -29,7 +30,7 @@ dependencies {
 
 jar {
     manifest {
-        attributes 'Main-Class': 'com.data_realm.Main'
+        attributes 'Main-Class': 'com.data_realm.Application'
     }
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
 }
