--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ idea {
 
 dependencies {
     compile  'org.xerial:sqlite-jdbc:3.8.11.1'
+    compile 'com.github.ben-manes.caffeine:caffeine:2.6.0'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.3.2'
 
     compile("org.springframework.boot:spring-boot-starter-web")
