--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,9 @@ dependencies {
 
     compile("org.springframework.boot:spring-boot-starter-web")
 
+    compile "org.cache2k:cache2k-api:1.0.2.Final"
+    compile "org.cache2k:cache2k-core:1.0.2.Final"
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
 }
