--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 plugins {
-    id 'org.springframework.boot' version '1.5.8.RELEASE'
+    id 'org.springframework.boot' version '2.4.3'
 }
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
-apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 
 repositories {
     mavenCentral()
@@ -19,18 +19,15 @@ idea {
 }
 
 dependencies {
-    compile  'org.xerial:sqlite-jdbc:3.8.11.1'
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.3.2'
+    compile  'org.xerial:sqlite-jdbc:3.34.0'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
 
-    compile("org.springframework.boot:spring-boot-starter-web")
+    implementation 'org.springframework.boot:spring-boot-starter-web'
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'junit', name: 'junit', version: '4.13.2'
     testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
 }
 
-jar {
-    manifest {
-        attributes 'Main-Class': 'com.data_realm.Application'
-    }
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+bootJar {
+    mainClass = 'com.data_realm.Application'
 }
